# myProject_lab2

./: CMakeLists.txt
src/: fact.cpp  fibonacci.cpp  lab_functions.h  main.cpp  power2.cpp  subtraction.cpp  sum.cpp  task2.cpp  try_catch.cpp  try_catch_task.cpp  vectors_reverse_ways.cpp
